// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingIndicator /> renders 1`] = `
<div
  className=""
>
  <div
    className="loading loading--attack-color"
  >
    <div
      className="loading_dot"
    />
    <div
      className="loading_dot"
    />
    <div
      className="loading_dot"
    />
  </div>
</div>
`;

exports[`<LoadingIndicator /> renders in the center 1`] = `
<div
  className="loading--center"
>
  <div
    className="loading loading--attack-color"
  >
    <div
      className="loading_dot"
    />
    <div
      className="loading_dot"
    />
    <div
      className="loading_dot"
    />
  </div>
</div>
`;
